main.tf
#Create Apache Web Page on AWS using Terraform
#Created Key Pairs in AWS and used Putty for Mangement Access over SSH port 22
#Use Terrafrom init, plan, apply, destroy commands in terminal

#Provider Block Steps
#First Create Provider Block with Provider
#Add access keys as environmental variable



# Resource Block Steps
#1 Create VPC - Named Production with 10.0.0.0/16 address range.
#2 Create Interent Gateway - For public access from internet into web server.
#3 Create Custom Route Table - Attach to VPC, add Internet Gateway.
#4 Create Subnet - Associate with VPC.
#5 Associate Subnet and Custom Route Table
#6 Create Security Group - Allow traffic on 443, 80, 22 for HTTPS, HTTP and SSH.
#7 Create Network Interface - With an IP in the Subnet.
#8 Assign Elastic IP to Network Interface for Public Access
#9 Create Instance - Add AMI


#Issues
#Script did not work, had to log into instance with PUTTY and manually start Apache.



# Provider Block
provider "aws" {
    region = "us-east-1"
    #Access Key is an environmental variable
   
}


# Resource Block
#1 Create VPC
resource "aws_vpc" "prod-vpc" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "Production"
    }
}


#2 Create Interet Gateway
resource "aws_internet_gateway" "gw" {
    vpc_id = aws_vpc.prod-vpc.id
}

#3 Create Custom Route Table
resource "aws_route_table" "prod-route-table"{
    vpc_id = aws_vpc.prod-vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
    }

    route {
        ipv6_cidr_block = "::/0"
        gateway_id = aws_internet_gateway.gw.id
    }

    tags = {
        Name = "Prod"
    }
}

#4 Create a Subnet
resource "aws_subnet" "subnet-1"{
    vpc_id = aws_vpc.prod-vpc.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"

    tags = {
        Name = "prod-subnet"
    }
}

#5 Associate Subnet with Route Table
resource "aws_route_table_association" "a" {
    subnet_id = aws_subnet.subnet-1.id
    route_table_id = aws_route_table.prod-route-table.id
}


#6 Create Security Group to Allow Port 22, 88, 443
resource "aws_security_group" "allow_web" {
    name = "allow_web_traffic"
    description = "Allow web inbound traffic"
    vpc_id = aws_vpc.prod-vpc.id

    ingress {
        description = "HTTPS"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTP"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "SSH"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1" #any protocol
        cidr_blocks = ["0.0.0.0/0"]

    }

    tags = {
        Name = "allow-web"
    }
}


#7 Create a Network Interface with an IP in the Subnet from Step #4
resource "aws_network_interface" "web-server-nic"{
    subnet_id = aws_subnet.subnet-1.id
    private_ips = ["10.0.1.50"]
    security_groups = [aws_security_group.allow_web.id]
    
}

#8 Assign Elastic IP to Network Interface created in Step #7
# Public Ip to access over public internet
resource "aws_eip" "one" {
    vpc = true
    network_interface = aws_network_interface.web-server-nic.id
    associate_with_private_ip = "10.0.1.50"
    #depends_on = [aws_internet_gateway.gw]
}


#9 Create Ubuntu Server and Install/Enable Apache2
resource "aws_instance" "web-server-instance" {
    ami = "ami-007855ac798b5175e"
    instance_type = "t2.micro"
    availability_zone = "us-east-1a"
    key_name = "main-key"

    network_interface {
        device_index = 0
        network_interface_id = aws_network_interface.web-server-nic.id
    }

    user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your very first web server > /var/www/html/index.html'
                EOF

    tags = {
        Name = "web-server"
    }
  
}
